# ai-podcast-creator

./: .gitignore  PRD.md  README.md  pyproject.toml  report.md
Business to Business Sales Podcast/: README.md  pyproject.toml
Business to Business Sales Podcast/src/automated_business_to_business_sales_podcast_crew_orchestration/: crew.py  main.py
Business to Business Sales Podcast/src/automated_business_to_business_sales_podcast_crew_orchestration/config/: agents.yaml  tasks.yaml
config/: heygen_settings.json
src/data/: Marketing-Strategy-for-B2B.txt
src/youtube/: crew.py  main.py
src/youtube/config/: agents.yaml  tasks.yaml
src/youtube/tools/: __init__.py  custom_tool.py
