[project]
name = "youtube"
version = "0.1.0"
description = "youtube using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "pypdf2>=3.0.1",
    "google-api-python-client>=2.0.0",
    "ipykernel>=6.29.5",
]

[project.scripts]
youtube = "youtube.main:run"
run_crew = "youtube.main:run"
train = "youtube.main:train"
replay = "youtube.main:replay"
test = "youtube.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
