[project]
name = "automated_business_to_business_sales_podcast_crew_orchestration"
version = "0.1.0"
description = "automated_business_to_business_sales_podcast_crew_orchestration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
automated_business_to_business_sales_podcast_crew_orchestration = "automated_business_to_business_sales_podcast_crew_orchestration.main:run"
run_crew = "automated_business_to_business_sales_podcast_crew_orchestration.main:run"
train = "automated_business_to_business_sales_podcast_crew_orchestration.main:train"
replay = "automated_business_to_business_sales_podcast_crew_orchestration.main:replay"
test = "automated_business_to_business_sales_podcast_crew_orchestration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
